[package]
name = "kalshi-hft"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rsa = { version = "0.9", features = ["sha2", "pem"] }
sha2 = "0.10"
base64 = "0.21"
signature = { version = "2.0", features = ["rand_core"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1.3", features = ["v4"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
